Bug Fix: Cards Alignment Fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -240,7 +240,7 @@ body{
 
     background:#f3f3f3;
     border-radius:18px;
-
+    margin-right:25px;
     display:flex;
     flex-direction:column;
     justify-content:center;
