--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,6 +187,8 @@ a{
     border-bottom:1px solid #eaeaea;
     padding:10px 0;
     margin-top:120px;
+    margin-left:95px;
+    margin-right:95px;
 }
 
 #filters{
@@ -274,4 +276,9 @@ input:checked + .slider{
 
 input:checked + .slider:before{
     transform:translateX(20px);
+}
+
+.card-wrapper{
+    margin-left:60px;
+    margin-right:60px;
 }
